--- a/www/templates/__base__.html
+++ b/www/templates/__base__.html
@@ -35,11 +35,11 @@
 <body>
     <nav class="uk-navbar uk-navbar-attached uk-margin-bottom">
         <div class="uk-container uk-container-center">
-            <a href="/" class="uk-navbar-brand">Awesome</a>
+            <a href="/" class="uk-navbar-brand">小猪带孩子先走</a>
             <ul class="uk-navbar-nav">
                 <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-book"></i> 诗</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-code"></i> 远方</a></li>
+                <li><a target="_blank" href="http://www.cnblogs.com/skywang12345/p/3603935.html"><i class="uk-icon-book"></i> 数据结构&算法</a></li>
+                <li><a target="_blank" href="https://github.com/luckyDog123/zhujh_blog"><i class="uk-icon-code"></i> 源代码</a></li>
             </ul>
             <div class="uk-navbar-flip">
                 <ul class="uk-navbar-nav">
