--- a/www/templates/manage_blog_edit.html
+++ b/www/templates/manage_blog_edit.html
@@ -46,6 +46,7 @@ $(function () {
         $('#loading').hide();
         initVM({
             name: '',
+            category:'',
             summary: '',
             content: ''
         });
@@ -82,6 +83,12 @@ $(function () {
                 <label class="uk-form-label">标题:</label>
                 <div class="uk-form-controls">
                     <input v-model="name" name="name" type="text" placeholder="标题" class="uk-width-1-1">
+                </div>
+            </div>
+            <div class="uk-form-row">
+                <label class="uk-form-label">类别:</label>
+                <div class="uk-form-controls">
+                         <textarea v-model="category" rows="1" name="category" placeholder="类别" class="uk-width-1-1" style="resize:none;"></textarea>
                 </div>
             </div>
             <div class="uk-form-row">
