--- a/www/templates/manage_blogs.html
+++ b/www/templates/manage_blogs.html
@@ -74,6 +74,7 @@ $(function() {
             <thead>
                 <tr>
                     <th class="uk-width-5-10">标题 / 摘要</th>
+                   <th class="uk-width-2-10">类别</th>
                     <th class="uk-width-2-10">作者</th>
                     <th class="uk-width-2-10">创建时间</th>
                     <th class="uk-width-1-10">操作</th>
@@ -83,6 +84,9 @@ $(function() {
                 <tr v-repeat="blog: blogs" >
                     <td>
                         <a target="_blank" v-attr="href: '/blog/'+blog.id" v-text="blog.name"></a>
+                    </td>
+                    <td>
+                        <a target="_blank" v-attr="href: '/blog/'+blog.id" v-text="blog.category_name"></a>
                     </td>
                     <td>
                         <a target="_blank" v-attr="href: '/user/'+blog.user_id" v-text="blog.user_name"></a>
